<?xml version="1.0"?>
<package format="2">
  <name>snapshotter_2</name>
  <version>0.0.0</version>
  <description>A complete rewrite of the snapshotter</description>
  <maintainer email="a.boeckmann@cellumation.com">arne</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbag</depend>
  <depend>rosbag_storage</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>std_msgs</depend>
  <depend>system_state_monitor</depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>boost_sml_ros</depend>
  <depend>std_srvs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
